fixed insert image in to line broken about layout flex-wrap

--- a/ranking list/css/styles.css
+++ b/ranking list/css/styles.css
@@ -103,5 +103,6 @@ img:not(.title){
 }
 
 .highlight{
-    background-color: white !important;
+    background-color: rgba(0,0,0,0) !important;
 }
+
